duniverse/cstruct-sexp.5.1.1/ppx_test/errors/cstruct_duplicate_field.ml
[%%cstruct
type dup = {
  x : uint8_t;
  y : uint8_t;
  x : uint8_t;
} [@@little_endian]
]
