duniverse/cstruct-sexp.5.1.1/ppx_test/errors/cstruct_duplicate_field.ml.expected
File "cstruct_duplicate_field.ml", line 5, characters 2-14:
Error: ppx_cstruct: field x is present several times in this type
